fix overflow in mobile

--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -7,6 +7,11 @@
 /* Import */
 @import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Open+Sans|Oswald:700');
 
+html, body {
+    width: 100%;
+    overflow-x: hidden;
+}
+
 body{
     background-color: rgb(22, 22, 22) !important;
     font-family: 'Open Sans', sans-serif;
